Updated HW38 - fixed remarks.

--- a/Урок 37-40. Кортежи. Множества. Словари/Python - HW38.html
+++ b/Урок 37-40. Кортежи. Множества. Словари/Python - HW38.html
@@ -213,7 +213,7 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных. Используйте только то, что было пройденно до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code>. Не используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Можно использовать <code><b>append()</b></code>, <code><b>split()</b></code>, <code class="python"><b>len()</b></code>, методы множества. Не используйте срезы.</p>
+        <p>Оформляйте ввод и вывод данных. Используйте только то, что было пройденно до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code>, но можно использовать при проверке наличия ключа в словаре. Не используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Можно использовать <code><b>append()</b></code>, <code><b>split()</b></code>, <code class="python"><b>len()</b></code>, методы множества. Не используйте срезы.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 38.1</h2>
