--- a/Урок 42-48. ООП/Python - HW46.html
+++ b/Урок 42-48. ООП/Python - HW46.html
@@ -241,7 +241,7 @@ for i in range(len(payments_amount)):
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 46.2</h2>
-        <p>Переделайте класс StudentDB так, чтобы программа заработала.
+        <p>Переделайте класс <code class="python"><b>StudentDB</b></code> так, чтобы программа заработала.
         <div class="console">
           <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
               <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
