Updated FP - added details.

--- a/Урок 49-50. Разбор финальных проектов/Python - FP.html
+++ b/Урок 49-50. Разбор финальных проектов/Python - FP.html
@@ -116,7 +116,7 @@
         <h3>Требования:</h3>
         <ol>
           <li>Определиться с финальным проектом. Выбрать из предложенного, либо свой вариант. <span class="hl-text">Не игра, а сервисное приложение</span>.</li>
-          <li>Должен быть рабочий бэкенд. Это значит должно быть <span class="hl-text">ООП</span> (классы, поля и методы), и используя его, можно составить приложение даже в консоли.</li>
+          <li>Должен быть рабочий бэкенд. Это значит должно быть <span class="hl-text">ООП</span> (использовать <span class="hl-text">абстракцию</span> - классы, поля и методы, а также <span class="hl-text">инкапсуляцию</span>), и используя его, можно составить приложение даже в консоли.</li>
           <li>Реализованы <span class="hl-text">добавление</span>, <span class="hl-text">поиск</span>, <span class="hl-text">изменение</span> и <span class="hl-text">удаление данных</span> из базы данных.</li>
           <li>В проекте происходит манипуляция с <span class="hl-text">клиентами</span> и <span class="hl-text">товарами</span>/<span class="hl-text">услугами</span>.</li>
           <li>Должна быть возможность <span class="hl-text">сохранить</span> и <span class="hl-text">загрузить</span> базу данных в файлы.</li>
