Updated HW46 - fixed code in 46.3.

--- a/Урок 42-48. ООП/Python - HW46.html
+++ b/Урок 42-48. ООП/Python - HW46.html
@@ -709,9 +709,8 @@ class GameShop:
             is_success = True
         return is_success
 
-    def change_game(self, game_to_change: GameProduct, changed_game: GameProduct):
+    def change_game(self, game_to_change_id: str, changed_game: GameProduct):
         is_success = False
-        game_to_change_id = game_to_change.get_id()
         game_to_change = self.get_game(game_to_change_id)
         if game_to_change:
             changed_game_id = changed_game.get_id()
