Updated HW28, HW46 and FP - minor fixes.

--- a/Урок 28-34. Функции. Модули/Python - HW28.html
+++ b/Урок 28-34. Функции. Модули/Python - HW28.html
@@ -208,6 +208,7 @@ _ - свободные места</code></pre>
         <p>Затем программа <span class="hl-text">снова показывает главное меню<span>.</p>
         <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли ряд</span> и <span class="hl-text">колонку</span>. Если место свободно, то программа должна <span class="hl-text">вывести в консоль</span> <span class="string"><b>"Место успешно забронировано."</b></span>. В противном случае должна <span class="hl-text">вывести</span> <span class="string"><b>"Место уже занято. Пожалуйста, выберите другое место."</b></span> и после этого программа будет <span class="hl-text">предлагать забронировать место до тех пор, пока не выберется свободное место</span> или же <span class="hl-text">не будут введены пустые строки</span>. После этого программа <span class="hl-text">возвращается в главное меню</span>.</p>
         <p>После успешного бронирования <span class="hl-text">пункт 1 должен отобразить новые бронирования</span>.</p>
+        <p>Используйте <span class="hl-text">вложенные списки</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.2</h2>
