--- a/Урок 49-50. Разбор финальных проектов/Python - FP.html
+++ b/Урок 49-50. Разбор финальных проектов/Python - FP.html
@@ -151,6 +151,11 @@
           <li>Аренда спецтехники</li>
           <li class="no-padding-bottom">Оформление аренды спортивного инвентаря (например, лыж, сноубордов) на горнолыжном курорте</li>
         </ol>
+        <h3>Темы для финального проекта по категории "Роли":</h3>
+        <ol>
+          <li>Футбольный менеджер</li>
+          <li class="no-padding-bottom">База данных преступников</li>
+        </ol>
       </div>
     </div>
   </div>
