Updated HW08, HW22 and HW24.

--- a/Урок 07-09. Введение в Python/Python - HW08.html
+++ b/Урок 07-09. Введение в Python/Python - HW08.html
@@ -268,7 +268,7 @@ to be</code></pre>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 8.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли год</span>, <span class="hl-text">месяц</span> и <span class="hl-text">день рождения</span>, <span class="hl-text">формирует из этих чисел одно число</span> и <span class="hl-text">выводит полученное число в консоль</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли год</span>, <span class="hl-text">месяц</span> и <span class="hl-text">день рождения</span>, <span class="hl-text">формирует из этих чисел одно число</span> и <span class="hl-text">выводит полученное число в консоль</span>. Работать именно как с <span class="hl-text">числами</span>, а не строками!</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите год: <span class="input">2000</span>
