--- a/Урок 21-27. Строки. Списки/Python - HW22.html
+++ b/Урок 21-27. Строки. Списки/Python - HW22.html
@@ -336,7 +336,7 @@ index = randint(start, end)  # Использование функции для 
         </div>
       </div>
       <div class="right-rect">
-        <h2>Домашнее Задание 22.9</h2>
+        <h2>Домашнее Задание 22.9 (Необязатльное)</h2>
         <p><span class="hl-text">Teston Lebra</span> попросили определить <span class="string"><b>"текст"</b></span> молекул ДНК по хэшам. Напишите программу, которая <span class="hl-text">перебирает все возможные комбинации молекул ДНК</span>, <span class="hl-text">вычисляет их хэши</span> и <span class="hl-text">выводит в консоль найденные последовательности ДНК</span>.</p>
 
         <p>Хэши следующие:
