--- a/Урок 21-27. Строки. Списки/Python - HW24.html
+++ b/Урок 21-27. Строки. Списки/Python - HW24.html
@@ -257,21 +257,6 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку текста на английском</span>, <span class="hl-text">преобразует каждое предложение в тексте так, чтобы оно начиналось с большой буквы</span>, и <span class="hl-text">выводит результат в консоль</span>.</p>
-        <h3>Подсказки:</h3>
-        <ol>
-          <li>Создайте булевую переменную, по которой можно будет определить, нужно ли менять текущую букву на заглавную.</li>
-          <li class="no-padding-bottom">Используйте алгоритм, который был рассмотрен на уроке, где заглавные буквы нужно было заменить на строчные.</li>
-        </ol>
-        <h3>Консоль:</h3>
-        <div class="console">
-          <pre><code>Введите строку текста: <span class="input">abc. def? ghi! jkl.</span>
-
-Преобразованный текст: Abc. Def? Ghi! Jkl.</code></pre>
-        </div>
-      </div>
-      <div class="right-rect">
-        <h2>Домашнее Задание 24.6</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"В строке присутствуют только символы из набора ACEIJOUWaceijouw5869#."</b></span> или <span class="string"><b>"В строке присутствуют не только символы из набора ACEIJOUWaceijouw5869#."</b></span> <span class="hl-text">в зависимости от строки</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -281,7 +266,7 @@
         </div>
       </div>
       <div class="right-rect">
-        <h2>Домашнее Задание 24.7</h2>
+        <h2>Домашнее Задание 24.6</h2>
         <p><span class="hl-text">Teston Lebra</span> написал программу, которая ищет последовательность символов в строке и заменяет их на другую последовательность. Однако она работает некорректно. <span class="hl-text">Исправьте программу так, чтобы она работала верно, и рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
         <h3>Код:</h3>
         <div class="console">
@@ -321,6 +306,21 @@ print(f"Изменённая строка: {result}")</code></pre>
 Введите строку изменения: <span class="input">xx</span>
 
 Изменённая строка: abcxxabc xx</code></pre>
+        </div>
+      </div>
+            <div class="right-rect">
+        <h2>Домашнее Задание 24.7 (Необязательное)</h2>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку текста на английском</span>, <span class="hl-text">преобразует каждое предложение в тексте так, чтобы оно начиналось с большой буквы</span>, и <span class="hl-text">выводит результат в консоль</span>.</p>
+        <h3>Подсказки:</h3>
+        <ol>
+          <li>Создайте булевую переменную, по которой можно будет определить, нужно ли менять текущую букву на заглавную.</li>
+          <li class="no-padding-bottom">Используйте алгоритм, который был рассмотрен на уроке, где заглавные буквы нужно было заменить на строчные.</li>
+        </ol>
+        <h3>Консоль:</h3>
+        <div class="console">
+          <pre><code>Введите строку текста: <span class="input">abc. def? ghi! jkl.</span>
+
+Преобразованный текст: Abc. Def? Ghi! Jkl.</code></pre>
         </div>
       </div>
     </div>
