Updated HW38 and PT41 - minor fixes.

--- a/Урок 41. Исключения/Python - PT41.html
+++ b/Урок 41. Исключения/Python - PT41.html
@@ -172,7 +172,7 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 41.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <code class="python"><b>16</b></code>-изначный номер</span> и <span class="hl-text">количество денег</span>, затем <span class="hl-text">выводит в консоль оставшееся количество</span>. Реализуйте <span class="hl-text">исключения</span>. Программа должна завершиться только в том случае, если <span class="hl-text">все данные верны</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <code class="python"><b>16</b></code>-изначный номер</span> и <span class="hl-text">количество денег</span>. Затем с указанного номера <span class="hl-text">снимается указанное количество денег</span> и <span class="hl-text">выводится в консоль оставшеся количество</span>. Реализуйте <span class="hl-text">исключения</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 41.2</h2>
