--- a/Урок 37-40. Кортежи. Множества. Словари/Python - HW38.html
+++ b/Урок 37-40. Кортежи. Множества. Словари/Python - HW38.html
@@ -304,8 +304,25 @@
         </div>
         </p>
 
-        <p>Данные о книге хранятся в виде словаря с ключами <code class="python"><b>"book_id"</b></code>, <code class="python"><b>"title"</b></code>, <code class="python"><b>"author"</b></code>, <code class="python"><b>"genre"</b></code>, <code class="python"><b>"release_year"</b></code>.</p>
-        <p>Все книги хранятся в <span class="hl-text">списке</span>. Изначально список книг пустой.</p>
+        <p>Данные о книге хранятся в виде словаря с ключами <code class="python"><b>"book_id"</b></code>, <code class="python"><b>"title"</b></code>, <code class="python"><b>"author"</b></code>, <code class="python"><b>"genre"</b></code>, <code class="python"><b>"release_year"</b></code>. Например:</p>
+        <div class="console">
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+            </svg>
+            Copy code</button>
+          <pre><code class="python">book_1 = {"book_id": "B-001", "title": "Python Tricks. The Book", "author": "Dan Bader", "genre": "Reference work", "release_year": 2017}
+book_2 = {"book_id": "B-005", "title": "Blood, Sweat and Pixels", "author": "Jason Schreier", "genre": "Video Games", "release_year": 2017}
+book_3 = {"book_id": "B-003", "title": "Structure and Interpretation of Computer Programs", "author": "Harold Abelson and Gerald Jay Sussman", "genre": "Programming", "release_year": 1985}</code></pre>
+        </div>
+        <p>Все книги хранятся в <span class="hl-text">списке</span>. Например:</p>
+        <div class="console">
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+            </svg>
+            Copy code</button>
+          <pre><code class="python">book_list = [book_1, book_2, book_3]</code></pre>
+        </div>
+        <p>Изначально список книг может быть пустым.</p>
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">выводит в консоль книги в следующем виде</span>:
         <div class="console">
@@ -345,7 +362,7 @@
         <h3>Дополнительно:</h3>
         <ol>
           <li>Попытайтесь разделить программу на <span class="hl-text">фронтенд</span> и <span class="hl-text">бэкенд</span>. Для этого создайте разные функции. Помните, что во фронтенд помещается <span class="hl-text">логика ввода</span>, <span class="hl-text">проверки ввода</span> и <span class="hl-text">его преобразование</span>, а также <span class="hl-text">вывод</span>. В бэкенд помещается вся остальная логика - <span class="hl-text">поиск</span>, <span class="hl-text">добавление</span>, <span class="hl-text">удаление</span>, <span class="hl-text">изменение</span>, <span class="hl-text">формирование данных для вывода</span> и <span class="hl-text">подобные операции</span>.</li>
-          <li class="no-padding-bottom">Переделайте программу так, чтобы <span class="hl-text">книги хранились не в списке, а в словаре</span>, где ключём является <span class="hl-text">идентификатор книги</span>, а значением - <span class="hl-text">книга как словарь</span>. При этом в самой книге уберите ключ <code class="python"><b>"book_id"</b></code>. Итоге должна получиться следующая структура:
+          <li class="no-padding-bottom">Переделайте программу так, чтобы <span class="hl-text">книги хранились не в списке, а в словаре</span>, где ключём является <span class="hl-text">идентификатор книги</span>, а значением - <span class="hl-text">книга как словарь</span>. При этом в самой книге уберите ключ <code class="python"><b>"book_id"</b></code>. В итоге должна получиться следующая структура:
             <div class="console">
               <pre><code>{<span class="string">"Идентификатор"</span>: {<span class="string">"title"</span>: <span class="string">"Название"</span>, <span class="string">"author"</span>: <span class="string">"Имя"</span>, <span class="string">"genre"</span>: <span class="string">"Жанр"</span>, <span class="string">"release_year"</span>: <span class="number"><год></span>},
  <span class="string">"Идентификатор"</span>: {<span class="string">"title"</span>: <span class="string">"Название"</span>, <span class="string">"author"</span>: <span class="string">"Имя"</span>, <span class="string">"genre"</span>: <span class="string">"Жанр"</span>, <span class="string">"release_year"</span>: <span class="number"><год></span>},
