--- a/Урок 42-48. ООП/Python - HW42.html
+++ b/Урок 42-48. ООП/Python - HW42.html
@@ -212,6 +212,7 @@
         <p>Создайте класс <span class="hl-text">"Аккаунт"</span>. Этот класс должен <span class="hl-text">хранить поля для логина</span>, <span class="hl-text">пароля</span>, <span class="hl-text">имени</span>, <span class="hl-text">фамилии</span> и <span class="hl-text">баланса</span>.
           <br>Для класса определите <span class="hl-text">строковое представление</span> (<code class="python"><b>__str__</b></code>) и <span class="hl-text">конструктор</span> (<code class="python"><b>__init__</b></code>).
           <br>Для класса определите <span class="hl-text">метод пополнения баланса</span> и <span class="hl-text">метод снятия с баланса</span>. Методы принимают <span class="hl-text">положительные целые числа</span>.
+          <br>Для класса определите <span class="hl-text">метод перевода денег</span>. Метод принимает <span class="hl-text">аккаунт</span> и <span class="hl-text">количество денег</span>, у себя <span class="hl-text">вызывает метод снятия с баланса</span>. Если получилось снять у себя, то <span class="hl-text">вызывает пополнение у целевого аккаунта</span>. <span class="hl-text">Возвращает</span> <code class="python"><b>True</b></code>, если операция прошла успешно, и <code class="python"><b>False</b></code> в противном случае.
         </p>
       </div>
       <div class="right-rect">
@@ -248,7 +249,7 @@
 
         <p>При выборе <span class="hl-text">пунктов 2</span>-<span class="hl-text">3</span> программа <span class="hl-text">запрашивает соответствующие данные</span> и <span class="hl-text">сразу же меняет данные у аккаунта</span>.</p>
         <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает число</span>, затем <span class="hl-text">вызывает у объекта метод пополнения</span>. Программа должна <span class="hl-text">сообщить об успехе</span> или <span class="hl-text">проблеме</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 5</span> программа <span class="hl-text">запрашивает логин другого пользователя</span>. Если он найден, то программа <span class="hl-text">запрашивает с консоли сумму перевода</span>. Затем программа <span class="hl-text">вызывает у текущего аккаунта метод снятия баланса</span>. Если он проходит успешно, то <span class="hl-text">у найденного аккаунта вызывается метод пополнения на указанную сумму</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 5</span> программа <span class="hl-text">запрашивает логин другого пользователя</span>. Если он найден, то программа <span class="hl-text">запрашивает с консоли сумму перевода</span>. Затем программа <span class="hl-text">вызывает у текущего аккаунта метод перевода</span>. В зависимости от результата программа <span class="hl-text">выводит в консоль сообщение</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 42.5</h2>
@@ -266,7 +267,8 @@
 3. Показать общую стоимость автомобилей
 4. Добавить новый автомобиль в список
 5. Удалить автомобиль из списка по идентификатору
-6. Изменить автомобиль по идентификатору</code></pre>
+6. Изменить автомобиль по идентификатору
+7. Завершить программу</code></pre>
         </div>
         </p>
 
