Updated Lesson51-58 - added programs and images to HW52 and HW54, minor fixes.

--- a/Урок 51-58. Tkinter/Python - HW52/Python - HW52.html
+++ b/Урок 51-58. Tkinter/Python - HW52/Python - HW52.html
@@ -95,6 +95,9 @@
         <p>Выбрав во фронтенде пользователя, заполнив данные и нажав кнопку <span class="hl-text">"Изменить"</span>, программа <span class="hl-text">выделяет идентификатор из фронтенда</span>, <span class="hl-text">ищет его в бэкенде</span> и, если находит, то <span class="hl-text">считывает данные из полей</span>, <span class="hl-text">формирует словарь из этих данных</span> и <span class="hl-text">изменяет данные выбранного пользователя как в бэкенде</span>, так и во <span class="hl-text">фронтенде</span>. Если пользователь не выбран или данные из полей пустые, то программа должна <span class="hl-text">оповещать об этом в отдельном Label</span>.</p>
 
         <p>Выбрав во фронтенде пользователя и нажав кнопку <span class="hl-text">"Подробно"</span>, программа <span class="hl-text">берёт все данные пользователя из бэкенда</span> и <span class="hl-text">показывает их во фронтенде</span>. Если пользователь не выбран, то программа должна <span class="hl-text">оповещать об этом в отдельном Label</span>.</p>
+
+        <h3>Вид программы:</h3>
+        <p><img src="https://i.imgur.com/8mbKWnv.png" alt="File location" height="480px"></p>
       </div>
     </div>
   </div>
