--- a/Урок 51-58. Tkinter/Python - HW54/Python - HW54.html
+++ b/Урок 51-58. Tkinter/Python - HW54/Python - HW54.html
@@ -102,6 +102,8 @@
       <div class="right-rect">
         <h2>Домашнее Задание 54.2</h2>
         <p>Создайте <span class="hl-text">визуальное приложение</span> для работы с классами из <span class="hl-text">Домашнего Задания 54.1</span>. В приложении должна быть возможность <span class="hl-text">добавить нового таксиста</span>, <span class="hl-text">показать</span>, <span class="hl-text">изменить</span> и <span class="hl-text">удалить таксиста</span>. Также должна быть возможность <span class="hl-text">выбрать таксиста в списке</span> и <span class="hl-text">отдельно добавить ему оценку</span>. Визуальное приложение должно содержать <span class="hl-text">Label</span>, <span class="hl-text">Entry</span>, <span class="hl-text">Button</span>, <span class="hl-text">Listbox</span>.</p>
+        <h3>Вид программы:</h3>
+        <p><img src="https://i.imgur.com/3ed1fDK.png" alt="File location" height="480"></p>
       </div>
     </div>
   </div>
