--- a/Урок 10-14. Операторы ветвлений/Python - PT11-12.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT11-12.html
@@ -291,7 +291,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 11.11</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли возраст</span> и <span class="hl-text">выводит в консоль возрастную группу</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли возраст как целое число</span> и <span class="hl-text">выводит в консоль возрастную группу</span>.</p>
         <p>Группы следующие:
           <br>— <span class="hl-text"><b>Детство</b></span>: до <code><span class="number"><b>13</b></span></code> включительно.
           <br>— <span class="hl-text"><b>Молодость</b></span>: от <code><span class="number"><b>14</b></span></code> до <code><span class="number"><b>24</b></span></code> включительно.
@@ -321,10 +321,10 @@
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли вес в килограммах</span> и <span class="hl-text">рост в метрах</span>, затем <span class="hl-text">выводит в консоль индекс массы тела (ИМТ)</span> и <span class="hl-text">категорию здоровья</span>. ИМТ вычисляется как отношение массы тела в килограммах к квадрату роста в метрах.</p>
         <p>Категории уровня здоровья:
           <br>— <span class="hl-text"><b>Недостаточный вес:</b></span> ИМТ менее <code><span class="number"><b>18.5</b></span></code>.
-          <br>— <span class="hl-text"><b>Нормальный вес:</b></span> ИМТ от <code><span class="number"><b>18.5</b></span></code> до <code><span class="number"><b>24.9</b></span></code>.
-          <br>— <span class="hl-text"><b>Избыточный вес:</b></span> ИМТ от <code><span class="number"><b>25</b></span></code> до <code><span class="number"><b>29.9</b></span></code>.
-          <br>— <span class="hl-text"><b>Ожирение:</b></span> ИМТ от <code><span class="number"><b>30</b></span></code> до <code><span class="number"><b>34.9</b></span></code>.
-          <br>— <span class="hl-text"><b>Сильное ожирение:</b></span> ИМТ от <code><span class="number"><b>35</b></span></code> до <code><span class="number"><b>39.9</b></span></code>.
+          <br>— <span class="hl-text"><b>Нормальный вес:</b></span> ИМТ от <code><span class="number"><b>18.5</b></span></code> до <code><span class="number"><b>25</b></span></code>.
+          <br>— <span class="hl-text"><b>Избыточный вес:</b></span> ИМТ от <code><span class="number"><b>25</b></span></code> до <code><span class="number"><b>30</b></span></code>.
+          <br>— <span class="hl-text"><b>Ожирение:</b></span> ИМТ от <code><span class="number"><b>30</b></span></code> до <code><span class="number"><b>35</b></span></code>.
+          <br>— <span class="hl-text"><b>Сильное ожирение:</b></span> ИМТ от <code><span class="number"><b>35</b></span></code> до <code><span class="number"><b>40</b></span></code>.
           <br>— <span class="hl-text"><b>Очень сильное ожирение:</b></span> ИМТ <code><span class="number"><b>40</b></span></code> и выше.
         </p>
         <h3>Консоль:</h3>
@@ -352,7 +352,7 @@
         <p>Скидка расчитывается следующим образом:
           <br>— Стоимость корзины от <code><span class="number"><b>50</b></span></code> до <code><span class="number"><b>100</b></span></code> - скидка <code><span class="number"><b>5%</b></span></code>.
           <br>— Стоимость корзины от <code><span class="number"><b>100</b></span></code> до <code><span class="number"><b>150</b></span></code> - скидка <code><span class="number"><b>10%</b></span></code>.
-          <br>— Стоимость корзины от <code><span class="number"><b>150</b></span></code> до <code><span class="number"><b>200</b></span></code> - скидка <code><span class="number"><b>15%</b></span></code>.
+          <br>— Стоимость корзины от <code><span class="number"><b>150</b></span></code> и выше - скидка <code><span class="number"><b>15%</b></span></code>.
         </p>
 
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли стоимость корзины</span> и <span class="hl-text">ответ на вопрос</span> <span class="string"><b>"Клиент является участником программы лояльности?"</b></span>, затем <span class="hl-text">выводит в консоль итоговую сумму оплаты</span>.</p>
