--- a/Урок 15-20. Циклы/Python - PT19-20.html
+++ b/Урок 15-20. Циклы/Python - PT19-20.html
@@ -127,9 +127,10 @@
 </code></pre>
         </div>
 
-        <p>В программе есть две роли - <span class="hl-text">клиент</span> и <span class="hl-text">администратор</span>.</p>
+        <p>В программе есть две роли - <span class="hl-text">клиент</span> и <span class="hl-text">администратор</span>. Условимся, что на всю программу у нас может быть только <span class="hl-text">один клиент</span> и только <span class="hl-text">один администратор</span>.</p>
         <p>Выбор <span class="hl-text">пункта 1</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span> нового клиента.
+          <br>— Программа <span class="hl-text">запрашивает с консоли логин</span>, <span class="hl-text">пароль</span>, <span class="hl-text">имя</span>, <span class="hl-text">фамилию</span>, <code><span class="number"><b>16</b></span></code>-<span class="hl-text">значный номер карты</span> и <span class="hl-text">CVV/CVC код</span>.
+          <br>— Программа <span class="hl-text">заменяет данные старого клиента</span> на новые данные.
           <br>— Возвращается в <span class="hl-text">меню входа</span>.
         </p>
 
@@ -161,15 +162,20 @@
 1. Изменить имя
 2. Изменить фамилию
 3. Пополнить счёт
-4. Вернуться
-5. Завершить программу
+4. Изменить данные карты
+5. Вернуться
+6. Завершить программу
 </code></pre>
         </div>
         <p>В <span class="hl-text">меню кабинета</span> выбор <span class="hl-text">пункта 3</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли <code><span class="number"><b>16</b></span></code>-значный номер карты</span>, и <span class="hl-text">CVV/CVC код</span>.
-          <br>— Если они совпадают с определёнными данными, то программа <span class="hl-text">запрашивает с консоли сумму</span> и <span class="hl-text">добавляет на баланс карты</span>. В противном случае программа <span class="hl-text">возвращает в меню кабинета</span>.
+          <br>— Программа <span class="hl-text">запрашивает с консоли <code><span class="number"><b>16</b></span></code>-значный номер карты</span> и <span class="hl-text">CVV/CVC код</span>.
+          <br>— Если они совпадают с данными клиента, то программа <span class="hl-text">запрашивает с консоли сумму</span> и <span class="hl-text">добавляет на баланс карты</span>. В противном случае программа <span class="hl-text">возвращает в меню кабинета</span>.
         </p>
         <p>Выбор <span class="hl-text">пункта 4</span>:
+          <br>— Программа <span class="hl-text">запрашивает с консоли <code><span class="number"><b>16</b></span></code>-значный номер карты</span> и <span class="hl-text">CVV/CVC код</span>.
+          <br>— Программа <span class="hl-text">заменяет данные карты на введённые</span>.
+        </p>
+        <p>Выбор <span class="hl-text">пункта 5</span>:
           <br>— Программа <span class="hl-text">возвращается в меню клиента</span>.
         </p>
         <p>В <span class="hl-text">меню клиента</span> выбор <span class="hl-text">пункта 2</span>:
@@ -178,33 +184,18 @@
         <div class="console">
           <pre><code>Ваш текущий баланс: &ltчисло&gt
 ====================================================
-1. Оплатить корзину
-2. Вернуться
-3. Завершить программу
+1. Вернуться
+2. Завершить программу
 ====================================================
-Выберите товары, которые хотите положить в корзину.
-4. Хлеб - количество: 100, цена: 0.4
-5. Молоко - количество: 0, цена: 2.67
-6. Яйца (10шт) - количество: 30, цена: 2.49
-====================================================
-Итоговая сумма: &ltчисло&gt
-Ваша корзина:
-- &ltтовар&gt - &ltколичество&gt
-- &ltтовар&gt - &ltколичество&gt
+Выберите товары, которые хотите купить.
+3. Хлеб - количество: 100, цена: 0.4
+4. Молоко - количество: 0, цена: 2.67
+5. Яйца (10шт) - количество: 30, цена: 2.49
 </code></pre>
         </div>
         <p>Выбор <span class="hl-text">товара</span>:
           <br>— Программа <span class="hl-text">запрашивает с консоли количество</span>.
-          <br>— Введённое количество <span class="hl-text">добавляется в переменную товара клиента</span>.
-        </p>
-        <p>Выбор <span class="hl-text">пункта 1</span>:
-          <br>— Программа <span class="hl-text">выводит в консоль итоговую сумму</span> и <span class="hl-text">корзину клиента</span>.
-          <br>— Просит <span class="hl-text">подтверждение</span> оплаты с консоли.
-          <br>— Если пользователь подтвердил и на балансе достаточное количество денег, то:
-          <br>—— Программа <span class="hl-text">снимает деньги с баланса пользователя</span>.
-          <br>—— <span class="hl-text">Отнимает количество товаров</span>, которые были куплены.
-          <br>—— <span class="hl-text">Добавляет историю покупок в виде строки</span>.
-          <br>—— <span class="hl-text">Очищает корзину клиента</span>.
+          <br>— Если товара достаточно, то <span class="hl-text">уменьшает количество товара</span>, <span class="hl-text">вычисляет стоимость</span> и <span class="hl-text">вычитывает из текущего баланса карты</span>.
         </p>
         <h3>Меню администратора:</h3>
         <div class="console">
@@ -217,7 +208,7 @@
         </div>
         <p>Выбор <span class="hl-text">пункта 1</span>:
           <br>— Программа <span class="hl-text">запрашивает с консоли идентификатор клиента</span>.
-          <br>— Если введённый идентификатор верный, то программа <span class="hl-text">выводит в консоль имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс</span>, <span class="hl-text">историю покупок</span>.
+          <br>— Если введённый идентификатор верный, то программа <span class="hl-text">выводит в консоль имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс</span>.
         </p>
         <p>Выбор <span class="hl-text">пункта 2</span>:
           <br>— Программа <span class="hl-text">выводит в консоль следующие данные</span> и <span class="hl-text">меню</span>:
@@ -233,11 +224,21 @@
 </code></pre>
         </div>
         <p>Выбор <span class="hl-text">товара</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли новое название</span>, <span class="hl-text">количество</span> и <span class="hl-text">цену</span>.
-          <br>— Если вводятся пустые данные, то <span class="hl-text">соответствующая информация не меняется</span>.
-          <br>— Программа <span class="hl-text">показывает старые данные</span> и <span class="hl-text">новые данные</span>.
-          <br>— <span class="hl-text">Запрашивает с консоли подтверждение на изменение</span>.
-        </p>
+          <br>— Программа <span class="hl-text">делает копию данных выбранного товара</span>.
+          <br>— <span class="hl-text">Выводит в консоль данные выбранного товара</span> и <span class="hl-text">данные копии</span>.
+          <br>— <span class="hl-text">Выводит в консоль меню изменения товара</span>:</p>
+                <div class="console">
+          <pre><code>СТАРЫЕ ДАННЫЕ: Хлеб - количество: 100, цена: 0.4
+НОВЫЕ ДАННЫЕ: Хлеб - количество: 100, цена: 0.4
+====================================================
+1. Изменить название
+2. Изменить количество
+3. Изменить цену
+4. Подтвердить изменения и вернуться
+5. Вернуться
+</code></pre>
+        </div>
+        <p><span class="hl-text">Пункты 1</span>-<span class="hl-text">3</span> меняют данные только у <span class="hl-text">копии</span>. При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">проверяет</span>, в порядке ли данные у копии и, если да, то <span class="hl-text">меняет старые данные на изменённые</span>.</p>
       </div>
     </div>
   </div>
