Updated PT19-20 - fixed text format.

--- a/Урок 15-20. Циклы/Python - PT19-20.html
+++ b/Урок 15-20. Циклы/Python - PT19-20.html
@@ -226,8 +226,9 @@
         <p>Выбор <span class="hl-text">товара</span>:
           <br>— Программа <span class="hl-text">делает копию данных выбранного товара</span>.
           <br>— <span class="hl-text">Выводит в консоль данные выбранного товара</span> и <span class="hl-text">данные копии</span>.
-          <br>— <span class="hl-text">Выводит в консоль меню изменения товара</span>:</p>
-                <div class="console">
+          <br>— <span class="hl-text">Выводит в консоль меню изменения товара</span>:
+        </p>
+        <div class="console">
           <pre><code>СТАРЫЕ ДАННЫЕ: Хлеб - количество: 100, цена: 0.4
 НОВЫЕ ДАННЫЕ: Хлеб - количество: 100, цена: 0.4
 ====================================================
