Updated HW24 - fixed 24.3.

--- a/Урок 21-27. Строки. Списки/Python - HW24.html
+++ b/Урок 21-27. Строки. Списки/Python - HW24.html
@@ -262,7 +262,7 @@
         <div class="console">
           <pre><code>Введите строку: <span class="input">abc5de</span>
 
-В строке присутствуют не только английские буквы</code></pre>
+В строке присутствуют не только символы из набора ACEIJOUWaceijouw5869#.</code></pre>
         </div>
       </div>
       <div class="right-rect">
