Updated HW28 - fixed 28.7.

--- a/Урок 28-34. Функции. Модули/Python - HW28.html
+++ b/Урок 28-34. Функции. Модули/Python - HW28.html
@@ -254,7 +254,7 @@ number = randint(start, end)  # Использование функции для
         <p>Затем напишите программу, которая <span class="hl-text">использует эту функцию</span>. Если функция возвращает <code class="python"><b>True</b></code>, то программа должна <span class="hl-text">выводить в консоль</span> <span class="string"><b>"В строке содержатся английские буквы."</b></span>. В противном случае программа должна выводить в консоль <span class="string"><b>"В строке отсутствуют английские буквы."</b></span>.</p>
 
         <h3>Подсказка:</h3>
-        <p>Решение Вы можете взять из <span class="hl-text">Домашнего Задания 24.3</span>. Только вместо вывода в консоль функция должна возвращать <code class="python"><b>True</b></code> или <code class="python"><b>False</b></code>.</p>
+        <p>Решение Вы можете взять из <span class="hl-text">Домашнего Задания 24.3</span>. Только вместо вывода в консоль функция должна возвращать <code class="python"><b>True</b></code> или <code class="python"><b>False</b></code>, а набор проверяемых символов должен состоять из букв английского алфавита.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.8</h2>
