--- a/Урок 28-34. Функции. Модули/Python - HW30.html
+++ b/Урок 28-34. Функции. Модули/Python - HW30.html
@@ -214,17 +214,39 @@
           <br>— <span class="hl-text"><b>pop:</b></span> добавляет найденного пользователя в новый список, удаляет из списка пользователей, возвращает новый список
           <br>— <span class="hl-text"><b>remove:</b></span> удаляет из списка пользователей найденных пользователей, возвращает пустой список
         </p>
+        <p>Пользователь это список, у которого по индексу <span class="number"><b>0</b></span> находится <span class="hl-text">логин</span>, по индексу <span class="number"><b>1</b></span> находится <span class="hl-text">пароль</span>, по индексу <span class="number"><b>2</b></span> находится <span class="hl-text">число дней с последнего захода</span>.</p>
 
-        <p>Структура списка пользователей:
-          <br><span class="grey"><b>[
-              <br>&nbsp[<span class="string">"Login"</span>, <span class="string">"Password"</span>, <span class="number">&ltчисло_дней_с_последнего_захода&gt</span> ],
-              <br>&nbsp[<span class="string">"Login"</span>, <span class="string">"Password"</span>, <span class="number">&ltчисло_дней_с_последнего_захода&gt</span> ],
-              <br>&nbsp[<span class="string">"Login"</span>, <span class="string">"Password"</span>, <span class="number">&ltчисло_дней_с_последнего_захода&gt</span> ],
-              <br>&nbsp. . . . . . . . . . . . .
-              <br>]</b></span>
-        </p>
+        <h3>Тестовый список пользователей:</h3>
+        <div class="console">
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+            </svg>
+            Copy code</button>
+          <pre><code class="python">user_list = [
+    ["teston", "teston5869", 1],
+    ["firestorm", "T4mN9zX", 89],
+    ["shadowFox", "kJ8^P2q0", 12],
+    ["phantom24", "A3!gRe7L", 60],
+    ["silverHawk", "pQ5vTd!", 28],
+    ["ironClad", "W2z&kLm8", 77],
+    ["mysticWind", "fJ*1Ql8Z", 90],
+    ["blazeX", "Zy@!6oPm", 5],
+    ["novaForce", "F7nxRg1", 34],
+    ["orbitZ", "k^5uXj@9", 23],
+    ["user123", "aB35Fg", 7],
+    ["player42", "p@ssW0rd", 14],
+    ["alphaBravo", "9jKl!mN2", 30],
+    ["gamma_user", "GHij%Q4", 10],
+    ["superTest", "xYz12$", 25],
+    ["quickfox", "Qw3@zxc", 3],
+    ["mightyOne", "Lo!p6Tr3", 21],
+    ["zephyr07", "u7*&Tf0", 15],
+    ["bravoKing", "lMN3!q1", 5],
+    ["xFactor", "Y8*UioP4", 18]
+]</code></pre>
+        </div>
       </div>
-            <div class="right-rect">
+      <div class="right-rect">
         <h2>Домашнее Задание 30.5</h2>
         <p><span class="hl-text">Teston Lebra</span> написал фронтенд программы. Но другой программист не смог составить бэкенд. <span class="hl-text">Опишите только функции, соблюдая их сигнатуру</span>. Фронтенд трогать <span class="hl-text">нельзя</span>. После описания всех функций, программа должна работать <span class="hl-text">корректно</span>.</p>
         <h3>Код:</h3>
