Updated exam results and HW16.

--- a/Урок 15-20. Циклы/Python - HW16.html
+++ b/Урок 15-20. Циклы/Python - HW16.html
@@ -263,7 +263,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">позволяет пользователю добавить товар в корзину</span> и <span class="hl-text">оплатить эту корзину</span>. Считайте, что изначально у пользователя <span class="number"><b>1000</b></span> денег.</p>
+        <p>Напишите программу, которая <span class="hl-text">позволяет пользователю добавить товар в корзину (только стоимость)</span> и <span class="hl-text">оплатить эту корзину (итоговую стоимость)</span>. Считайте, что изначально у пользователя <span class="number"><b>1000</b></span> денег.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Ваш текущий баланс: 1000
